@@ -41,3 +41,4 @@ source/state.bps
 _release/
 source/BurdockPaint.data
 *.obj
+*.bdc
