@@ -20,9 +20,9 @@ PutCEL=53
 GetColor=58
 
 [DrawArea]
-Zoom=2
-ZoomLeft=-118
-ZoomTop=-81
+Zoom=3
+ZoomLeft=-46
+ZoomTop=-9
 
 [BasicControls]
 Tool0=DRAW
